# camera_model

./: .gitignore  CMakeLists.txt
include/camera_model/apriltag/: Edge.h  TagFamily.h
include/camera_model/apriltag_frontend/: GridCalibrationTargetAprilgrid.hpp  GridCalibrationTargetBase.hpp
include/camera_model/calib/: CameraCalibration.h  CameraCalibrationTest.h
include/camera_model/camera_models/: Camera.h  CataCamera.h  CostFunctionFactory.h  EquidistantCamera.h  FovCamera.h  PinholeCamera.h  PinholeFullCamera.h  PolyFisheyeCamera.h  ScaramuzzaCamera.h  SplineCamera.h
include/camera_model/chessboard/: Chessboard.h
include/camera_model/code_utils/math_utils/: Polynomial.h
src/: april_calib.cc  intrinsic_calib.cc  test_calib.cc
src/apriltag/: Edge.cc  FloatImage.cc  GLine2D.cc  GLineSegment2D.cc  Gaussian.cc  GrayModel.cc  Homography33.cc  MathUtil.cc  Quad.cc  Segment.cc  TagDetection.cc  TagDetector.cc  TagFamily.cc  UnionFindSimple.cc
src/apriltag_frontend/: GridCalibrationTargetAprilgrid.cpp  GridCalibrationTargetBase.cpp
src/calib/: CameraCalibration.cc  CameraCalibrationTest.cc
src/camera_models/: Camera.cc  CameraFactory.cc  CataCamera.cc  CostFunctionFactory.cc  EquidistantCamera.cc  FovCamera.cpp  PinholeCamera.cc  PinholeFullCamera.cc  PolyFisheyeCamera.cpp  ScaramuzzaCamera.cc  SplineCamera.cpp
src/chessboard/: Chessboard.cc
src/code_utils/: cv_utils.cc
src/code_utils/math_utils/: Polynomial.cpp
